...
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.majid.forurcomfy.MainActivity">

    <Button
        android:id="@+id/loginMain"
        android:layout_width="212dp"
        android:layout_height="80dp"
        android:alpha="0.7"
        android:layout_below="@+id/registerMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_button"
        android:fontFamily="cursive"
        android:text="Log In"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/font_color"
        tools:targetApi="jelly_bean" />
...
